--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h2>14 y.o editor, vfx designer, producer</h2>
+      <h2>14 y.o Editor, Vfx Designer, Producer</h2>
       <p>I create stylish visuals & sounds.</p>
       <div class="buttons">
         <a href="#projects" class="btn">🎬 Projects</a>
@@ -30,9 +30,18 @@
 
   <section id="projects" class="projects">
     <h3>Projects</h3>
-    <p>You’ll find my recent edits and productions here soon.</p>
+    <p>Click a thumbnail to watch my edits.</p>
+
     <div class="project-grid">
-      <!-- Add your project thumbnails or video links here -->
+      <!-- PROJECT CARD -->
+      <div class="project-card">
+        <img src="projects/vfx1_thumbnail.jpg" alt="vfx1" class="thumbnail" />
+        <div class="video-container">
+          <video src="projects/vfx1.mp4" controls></video>
+          <button class="back-btn">← Back</button>
+        </div>
+        <p class="title">VFX Project 1</p>
+      </div>
     </div>
   </section>
 
